Fix use of wrong font

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
-$govuk-assets-path: "/paye-tax-calculator-frontend/assets/lib/govuk-frontend/govuk/assets/";
-$hmrc-assets-path: "/paye-tax-calculator-frontend/assets/lib/hmrc-frontend/hmrc/assets/";
+$govuk-assets-path: "/estimate-paye-take-home-pay/assets/lib/govuk-frontend/govuk/assets/";
+$hmrc-assets-path: "/estimate-paye-take-home-pay/assets/lib/hmrc-frontend/hmrc/assets/";
 
 @import "lib/govuk-frontend/govuk/all";
 @import "lib/hmrc-frontend/hmrc/all";
